boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_data_enums_through_codec_methods.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_source(SourceFixture::many([\"records/person\", \"enums/shape\",\n\"enums/message\", \"exports/encoded_functions\",]))"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_echo_bytes(bytes: java.nio.ByteBuffer, __boltffi_bytes_len: Int): ByteArray?
    @JvmStatic external fun boltffi_function_demo_keep_person(person: java.nio.ByteBuffer, __boltffi_person_len: Int): ByteArray?
    @JvmStatic external fun boltffi_function_demo_keep_shape(shape: java.nio.ByteBuffer, __boltffi_shape_len: Int): ByteArray?
    @JvmStatic external fun boltffi_function_demo_echo_message(message: java.nio.ByteBuffer, __boltffi_message_len: Int): ByteArray?
}


data class Person(
    val name: String,
    val repeat: String
) {
    internal fun wireSize(): Int {
        return 4 + Utf8Codec.maxBytes(this.name) + 4 + Utf8Codec.maxBytes(this.repeat)
    }

    internal fun writeTo(writer: WireWriter) {
        writer.writeString(this.name)
        writer.writeString(this.repeat)
    }

    internal fun toByteArray(): ByteArray {
        val buffer = WireWriterPool.acquire(wireSize())
        val writer = buffer.writer
        try {
            writeTo(writer)
            return buffer.bytes()
        } finally {
            buffer.close()
        }
    }

    companion object {
        internal fun fromReader(reader: WireReader): Person {
            return Person(
                reader.readString(),
                reader.readString()
            )
        }

        internal fun fromByteArray(bytes: ByteArray): Person {
            val reader = WireReader(bytes)
            return fromReader(reader)
        }
    }
}


sealed class Shape {
    internal abstract fun wireSize(): Int

    internal abstract fun writeTo(writer: WireWriter)

    internal fun toByteArray(): ByteArray {
        val buffer = WireWriterPool.acquire(wireSize())
        val writer = buffer.writer
        try {
            writeTo(writer)
            return buffer.bytes()
        } finally {
            buffer.close()
        }
    }


    data class Label(
        val field0: String
    ) : Shape() {
        internal override fun wireSize(): Int {
            return 4 + 4 + Utf8Codec.maxBytes(this.field0)
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(0u)
            writer.writeString(this.field0)
        }
    }

    companion object {
        internal fun fromReader(reader: WireReader): Shape {
            val tag = reader.readU32()
            return when (tag) {
                0u -> Label(reader.readString())
                else -> throw IllegalArgumentException("unknown Shape tag: $tag")
            }
        }

        internal fun fromByteArray(bytes: ByteArray): Shape {
            val reader = WireReader(bytes)
            return fromReader(reader)
        }
    }
}


sealed class Message {
    internal abstract fun wireSize(): Int

    internal abstract fun writeTo(writer: WireWriter)

    internal fun toByteArray(): ByteArray {
        val buffer = WireWriterPool.acquire(wireSize())
        val writer = buffer.writer
        try {
            writeTo(writer)
            return buffer.bytes()
        } finally {
            buffer.close()
        }
    }


    object Empty : Message() {
        internal override fun wireSize(): Int {
            return 4
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(0u)
        }
    }
    data class Text(
        val field0: String
    ) : Message() {
        internal override fun wireSize(): Int {
            return 4 + 4 + Utf8Codec.maxBytes(this.field0)
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(1u)
            writer.writeString(this.field0)
        }
    }
    data class Named(
        val name: String
    ) : Message() {
        internal override fun wireSize(): Int {
            return 4 + 4 + Utf8Codec.maxBytes(this.name)
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(2u)
            writer.writeString(this.name)
        }
    }

    companion object {
        internal fun fromReader(reader: WireReader): Message {
            val tag = reader.readU32()
            return when (tag) {
                0u -> Empty
                1u -> Text(reader.readString())
                2u -> Named(reader.readString())
                else -> throw IllegalArgumentException("unknown Message tag: $tag")
            }
        }

        internal fun fromByteArray(bytes: ByteArray): Message {
            val reader = WireReader(bytes)
            return fromReader(reader)
        }
    }
}

fun echoBytes(bytes: ByteArray): ByteArray {
    val __boltffi_bytes_wire = WireWriterPool.acquire(4 + bytes.size)
    val __boltffi_bytes_writer = __boltffi_bytes_wire.writer
    __boltffi_bytes_writer.writeBytes(bytes)
    try {
        val __boltffi_result = Native.boltffi_function_demo_echo_bytes(__boltffi_bytes_wire.directBuffer(), __boltffi_bytes_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readBytes()
    } finally {
        __boltffi_bytes_wire.close()
    }
}

fun keepPerson(person: Person): Person {
    val __boltffi_person_wire = WireWriterPool.acquire(person.wireSize())
    val __boltffi_person_writer = __boltffi_person_wire.writer
    person.writeTo(__boltffi_person_writer)
    try {
        val __boltffi_result = Native.boltffi_function_demo_keep_person(__boltffi_person_wire.directBuffer(), __boltffi_person_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return Person.fromReader(__boltffi_reader)
    } finally {
        __boltffi_person_wire.close()
    }
}

fun keepShape(shape: Shape): Shape {
    val __boltffi_shape_wire = WireWriterPool.acquire(shape.wireSize())
    val __boltffi_shape_writer = __boltffi_shape_wire.writer
    shape.writeTo(__boltffi_shape_writer)
    try {
        val __boltffi_result = Native.boltffi_function_demo_keep_shape(__boltffi_shape_wire.directBuffer(), __boltffi_shape_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return Shape.fromReader(__boltffi_reader)
    } finally {
        __boltffi_shape_wire.close()
    }
}

fun echoMessage(message: Message): Message {
    val __boltffi_message_wire = WireWriterPool.acquire(message.wireSize())
    val __boltffi_message_writer = __boltffi_message_wire.writer
    message.writeTo(__boltffi_message_writer)
    try {
        val __boltffi_result = Native.boltffi_function_demo_echo_message(__boltffi_message_wire.directBuffer(), __boltffi_message_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return Message.fromReader(__boltffi_reader)
    } finally {
        __boltffi_message_wire.close()
    }
}
